# wawbus

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  main.ipynb  part-one.ipynb  part-two.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst  wawbus.api.rst  wawbus.rst  wawbus.util.rst
tests/: test_api.py  test_main.py  test_util.py
wawbus/: __init__.py  __main__.py  constants.py  main.py
wawbus/api/: __init__.py  exceptions.py
wawbus/util/: dist.py  time.py  velocity_calc.py
