[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wawbus"
readme = "README.rst"
description = "A Python library for analyzing bus data from Warsaw Public Transport"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
]
license = {"file" = "LICENSE"}

[project.optional-dependencies]
dev = [
    "build",
    "setuptools",
    "wheel",
    "pytest",
    "flake8",
    "black",
    "sphinx",
]

[project.urls]
Source = "https://github.com/C10udburst/wawbus/tree/master#readme"
#Documentation = "https://C10udburst.github.io/wawbus/"
Tracker = "https://github.com/C10udburst/wawbus/issues"
Changelog = "https://github.com/C10udburst/wawbus/commits/master"

[tool.setuptools]
packages = ["wawbus"]
package-dir = { "wawbus"="wawbus"}

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = { "attr" = "wawbus.__version__"}