[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wawbus"
readme = "README.rst"
description = "A Python library for analyzing bus data from Warsaw Public Transport"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"
license = {"file" = "LICENSE"}

[project.urls]
Source = "https://github.com/C10udburst/wawbus/tree/master#readme"
Documentation = "https://C10udburst.github.io/wawbus/"
Tracker = "https://github.com/C10udburst/wawbus/issues"
Changelog = "https://github.com/C10udburst/wawbus/commits/master"

[tool.setuptools]
packages = ["wawbus", "wawbus.api", "wawbus.util"]
package-dir = { "wawbus"="wawbus", "wawbus.api"="wawbus/api", "wawbus.util"="wawbus/util"}

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = { "attr" = "wawbus.__meta__.__version__"}
dependencies = { "file" = "requirements.txt"}
optional-dependencies.dev = { "file" = "requirements-dev.txt"}